[package]
name = "mqtt_quic_tests"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
flowsdk = { version = "0.5.3", features = ["quic"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "mqtt_quic_test"
path = "src/bin/mqtt_quic_test.rs"
